--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,11 +29,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements-test.txt
-        pip install coveralls black==24.1.1 flake8 setuptools wheel twine
+        pip install coveralls black==24.4.2 flake8 setuptools wheel twine
 
     - name: Verify Code with Black
       run: |
-        black --config=.black.toml --check puremagic test
+        black --check puremagic test
 
     - name: Lint with flake8
       run: |
